# ledger-zcash

./: .clang-format  .git-blame-ignore-revs  .gitignore  .gitmodules  .sonarcloud.properties  CMakeLists.txt  Makefile  NOTES.md  README.md  ledger_app.toml  pyproject.toml  sonar-project.properties
.circleci/: config.yml
.github/workflows/: check_version.yml  codeql.yml  ledger.yml  lint.yml  main.yml  publish.yaml  sonarcloud.yml
app/: .gitignore  LICENSE  Makefile  Makefile.version  script.ld
app/rust/: Cargo.toml
app/rust/.cargo/: config  config.toml
app/rust/include/: commitments.h  notes.h  rslib.h  zip32.h
app/rust/src/: aead.rs  bitstreamer.rs  bolos.rs  commitments.rs  commitments_extern.rs  constants.rs  crypto.rs  cryptoops.rs  errors.rs  lib.rs  note_encryption.rs  notes.rs  notes_extern.rs  pedersen.rs  personalization.rs  redjubjub.rs  redjubjub_extern.rs  refactor.rs  sapling.rs  sighash.rs  tests.rs  tests_crypto.rs  types.rs  utils.rs  zeccrypto.rs  zip32.rs  zip32_extern.rs  zxformat.rs
app/rust/src/bolos/: aes.rs  blake2b.rs  canary.rs  heartbeat.rs  jubjub.rs  mod.rs  rng.rs  seed.rs  zemu.rs
app/rust/src/parser/: ffi.rs  mod.rs  parser.rs  parser_common.rs  transaction.rs  tx_input.rs  tx_output.rs
app/rust/tests/: 1i2o_simple.json  coinbase.json  transaction.rs  tx2.json  tx_with_witnesses.json  unspentable_output.json
app/src/: addr.c  addr.h  apdu_customcodes.h  apdu_errors.h  apdu_handler.c  bolos_target.h  chacha.c  chacha.h  coin.h  constants.h  crypto.c  crypto.h  index_NU5.h  index_sapling.c  index_sapling.h  jubjub.c  jubjub.h  key.c  key.h  nvdata.c  nvdata.h  parser.c  parser.h  parser_common.h  parser_impl.c  parser_impl.h  parser_txdef.h  pasta.c  pasta.h  secret.c  secret.h  sighash.c  sighash.h  swap.c  swap.h  txid.c  txid.h  view_custom.c  zcash_apdu_errors.h  zcash_utils.h  (+2 more)
app/src/c_api/: rust.c
app/src/common/: actions.c  actions.h  app_main.c  app_main.h  main.c  tx.c  tx.h
app/src/crypto/: chacha.c  chacha.h  jubjub.c  jubjub.h
app/src/handlers/: handler_addr.h  handler_keys.h  handler_path.h  handler_signing.h  handler_version.h
app/src/lib/: zbuffer.c
app/src/refactor/: index_sapling.c  index_sapling.h  sighash.c  txid.c  txid.h  zip-0317.c
app/ztruct/: Cargo.toml
app/ztruct/src/: lib.rs
app/ztruct/tests/: simple.rs  simple_array.rs  tests.rs
cmake/Hunter/: config.cmake
docs/: APDUSPEC.md  zcash_workflow.md  zcash_workflow_version2.md  zcash_workflow_version3.md
docs/previuos/: zcash_workflow_v1.md  zcash_workflow_v2.md
js/: .eslintrc.json  .gitignore  README.md  bun.lockb  eslint.config.js  jest.config.js  package.json  tsconfig.json
js/src/: app.test.ts  common.js  common.ts  consts.ts  helper.ts  helperV1.js  index.js  index.ts  types.ts  utils.ts
js/src/__test__/: addr.test.ts  keys.test.ts
js/tests/: basic.ispec.js  basic.spec.js  basic.test.js  jest.js
tests/: empty.cpp
tests/cpp/utils/: common.cpp
tests/zemu/: package.json
tests_zemu/: bun.lockb  globalsetup.js  jest.config.js  package.json  try.ts
tests_zemu/tests/: _config.ts  _vectors.ts  addresses.test.ts  basic.test.ts  common.ts  keys.test.ts  standard.test.ts  test.js  test.ts  test_txs.json  txs.test.ts  txs_advanced.test.ts  txs_basic.test.ts  unshielded_tx.js  unshielded_tx.ts  utils.ts  v5_transactions.json  vectors.ts  zcashtool.test.js  zcashtool.test.ts
tests_zemu/tools/: debug.mjs
zcashtools/: Cargo.toml
zcashtools/neon/: .gitignore  README.md  bun.lockb  package.json  tsconfig.json
zcashtools/neon/lib/: index.d.ts  index.js  index.ts  native.ts
zcashtools/neon/native/: Cargo.toml
zcashtools/neon/native/src/: lib.rs
zcashtools/neon/native/tests/: builder_test.rs  builder_test2.rs  data.json  types.rs
zcashtools/zcashtools/: Cargo.toml
zcashtools/zcashtools/src/: lib.rs  neon_bridge.rs  prover_ledger.rs  sighashdata_ledger.rs  txbuilder_ledger.rs  txprover_ledger.rs  zcashtools_errors.rs
