[workspace]
resolver = "2"

members = ["neon/native"]

[profile.release]
opt-level = "s"
overflow-checks = true

[patch.crates-io]
ledger-zcash-builder = { git = "https://github.com/Zondax/ledger-zcash-rs", rev = "0dd05cee4427f2c7ff1bfc9fb11f62f878c0cfa8" }
ledger-zcash = { git = "https://github.com/Zondax/ledger-zcash-rs", rev = "0dd05cee4427f2c7ff1bfc9fb11f62f878c0cfa8" }

# ledger-zcash-builder = { path = "../../ledger-zcash-rs/ledger-zcash-builder" }
# ledger-zcash = { path = "../../ledger-zcash-rs/ledger-zcash" }
