[workspace]
resolver = "2"

members = ["neon/native"]

[profile.release]
opt-level = "s"
overflow-checks = true

[patch.crates-io]
ledger-zcash-chain-builder = { git = "https://github.com/Zondax/ledger-zcash-tools", tag = "v2.0.0" }
ledger-zcash-app-builder = { git = "https://github.com/Zondax/ledger-zcash-tools", tag = "v2.0.0" }

# ledger-zcash-chain-builder = { path = "../../ledger-zcash-tools/ledger-zcash-chain-builder" }
# ledger-zcash-app-builder = { path = "../../ledger-zcash-tools/ledger-zcash-app-builder" }
