[package]
authors = ["Zondax AG <hello@zondax.ch>"]
name = "rslib"
version = "0.0.0"
edition = "2021"
readme = "README.md"
resolver = "2"

[lib]
name = "rslib"
crate-type = ["staticlib"]

[dependencies]
ztruct = { path = "../ztruct", version = "*" }

jubjub = { version = "0.10", default-features = false }

rand = { version = "0.8", default-features = false }
blake2b_simd = { version = "1", default-features = false }
blake2s_simd = { version = "1", default-features = false }
group = { version = "0.13", default-features = false }
chacha20poly1305 = { version = "0.10.1", default-features = false, features = ["heapless"] }

binary-ff1 = { version = "0.2.0", default-features = false }
aes = { version = "0.7.5", default-features = false }

byteorder = { version = "1.5", default-features = false }
hex = { version = "0.4.3", default-features = false }
nom = { version = "7.1", default-features = false }
bs58 = { version = "0.5", default-features = false, features = ["check"] }
log = "0.4"

[target.'cfg(any(unix, windows))'.dependencies]
getrandom = { version = "0.2.14", default-features = false }

[target.thumbv6m-none-eabi.dev-dependencies]
panic-halt = "0.2.0"

[profile.release]
lto = false
codegen-units = 1
debug = false
opt-level = "z"
overflow-checks = true

[profile.dev]
lto = "fat"
codegen-units = 1
debug=true
opt-level = "s"
panic = "abort"

[dev-dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
hex = { version = "0.4", features = ["alloc"] }
simple_logger = "5.0"

[features]
default = []
# use when compiling this crate as a lib for the cpp_tests suite
cpp_tests = []
