[package]
name = "zcashtools"
version = "0.1.0"
authors = ["Zondax GmbH <info@zondax.ch>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
#zcash_primitives = {version = "0.4.0", features="transparent-inputs"}
jubjub = { version = "0.5.1", default-features = false }
bellman = { version = "0.8", default-features = false, features = ["groth16"] }
blake2b_simd = "0.5"
bls12_381 = { version = "0.3.1"}
byteorder = "1"
directories = { version = "3", optional = true }
ff = { version = "0.8.0" }
lazy_static = "1"
minreq = { version = "2", features = ["https"], optional = true }
pairing = { version = "0.18"}
rand_core = "0.5.1"
wagyu-zcash-parameters = { version = "0.2", optional = true }
hex = {version="0.4.2", default-features=false}
zcash_proofs = { version = "0.4.0", features = ["multicore"] }
group = "0.8.0"
rand = { version = "0.7.3", default-features = false }
crypto_api_chachapoly = "0.4.3"
secp256k1 = {version="0.19.0",default-features=false}
sha2 = "0.9.1"
ripemd160 = "0.9.1"

serde_derive = "1.0.117"
serde = {version="1.0.117", features = ["derive"]}

[dependencies.zcash_primitives]
version = "0.4.0"
features=["transparent-inputs"]

