[package]
name = "zcashtool"
version = "0.1.0"
authors = ["Zondax AG <hello@zondax.ch>"]
license = "Apache-2.0"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
resolver = "2"

[lib]
name = "zcashtool"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
neon = { version = "0.10.1", default-features = false, features = ["napi-6"] }
rand_core = "0.6.4"
serde_derive = "1"
serde = "1"
log = "0.4"
snafu = { version = "0.8.2" }
zcash_primitives = { git = "https://github.com/Zondax/librustzcash", rev = "112eedd27b2e51b9e1b77603a776cd78e738c3ae", features = ["transparent-inputs"], package = "zcash_primitives" }

neon-serde = { git = "https://github.com/Zondax/neon-serde", branch = "master", default-features = false, features = [
    "napi-6",
] }

ledger-zcash-builder = { git = "https://github.com/Zondax/ledger-zcash-rs", rev = "3bad2fa4a7870270627edc25ebdb5b4818fd1855", package = "ledger-zcash-builder"  }
ledger-zcash =  { git = "https://github.com/Zondax/ledger-zcash-rs", rev = "3bad2fa4a7870270627edc25ebdb5b4818fd1855", package = "ledger-zcash"  }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
zcashtool = { path = "." }
env_logger = { version = "0.11", default-features = false }
log = "0.4"
