[package]
name = "zcashtool"
version = "0.1.0"
authors = ["Zondax AG <hello@zondax.ch>"]
license = "Apache-2.0"
edition = "2021"
exclude = ["artifacts.json", "index.node"]
resolver = "2"

[lib]
name = "zcashtool"
crate-type = ["cdylib", "rlib"]
path = "src/lib.rs"

[dependencies]
neon = { version = "0.10.1", default-features = false, features = ["napi-6"] }
rand_core = "0.6.4"
serde_derive = "1"
serde = "1"
log = "0.4"
snafu = { version = "0.8.2" }
zcash_primitives = { git = "https://github.com/Zondax/librustzcash", rev = "ce278848fef35903db46c3dced41658e90bbeb3c", features = ["transparent-inputs"], package = "zcash_primitives" }

neon-serde = { git = "https://github.com/Zondax/neon-serde", branch = "master", default-features = false, features = [
    "napi-6",
] }

ledger-zcash-chain-builder = { git = "https://github.com/Zondax/ledger-zcash-tools", tag = "v2.0.0", package = "ledger-zcash-chain-builder"  }
ledger-zcash-app-builder =  { git = "https://github.com/Zondax/ledger-zcash-tools", tag = "v2.0.0", package = "ledger-zcash-app-builder"  }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1.0.117"
zcashtool = { path = "." }
env_logger = { version = "0.11", default-features = false }
log = "0.4"
